src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEPRATOR

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> stmts
Rule 3     stmts -> stmt stmts
Rule 4     stmts -> stmt
Rule 5     stmt -> exp
Rule 6     stmt -> def_stmt
Rule 7     stmt -> print_stmt
Rule 8     print_stmt -> ( PRINT_NUM exp )
Rule 9     print_stmt -> ( PRINT_BOOL exp )
Rule 10    exps -> exp exps
Rule 11    exps -> exp
Rule 12    exp -> BOOL_VAL
Rule 13    exp -> NUMBER
Rule 14    exp -> variable
Rule 15    exp -> num_op
Rule 16    exp -> logical_op
Rule 17    exp -> fun_exp
Rule 18    exp -> fun_call
Rule 19    exp -> if_exp
Rule 20    num_op -> plus
Rule 21    num_op -> minus
Rule 22    num_op -> multiply
Rule 23    num_op -> divide
Rule 24    num_op -> modulus
Rule 25    num_op -> greater
Rule 26    num_op -> smaller
Rule 27    num_op -> equal
Rule 28    plus -> ( + exp exps )
Rule 29    minus -> ( - exp exp )
Rule 30    multiply -> ( * exp exps )
Rule 31    divide -> ( / exp exp )
Rule 32    modulus -> ( MODULUS exp exp )
Rule 33    greater -> ( > exp exp )
Rule 34    smaller -> ( < exp exp )
Rule 35    equal -> ( = exp exps )
Rule 36    logical_op -> and_op
Rule 37    logical_op -> or_op
Rule 38    logical_op -> not_op
Rule 39    and_op -> ( AND exp exps )
Rule 40    or_op -> ( OR exp exps )
Rule 41    not_op -> ( NOT exp )
Rule 42    def_stmt -> ( DEFINE ID exp )
Rule 43    fun_exp -> ( FUN fun_ids exp )
Rule 44    fun_ids -> ( ids )
Rule 45    ids -> ID ids
Rule 46    ids -> empty
Rule 47    last_exp -> exp
Rule 48    fun_call -> fun_exp params
Rule 49    fun_call -> fun_name params
Rule 50    params -> param params
Rule 51    params -> empty
Rule 52    param -> exp
Rule 53    variable -> ID
Rule 54    fun_name -> ID
Rule 55    if_exp -> ( IF exp exp exp )

Terminals, with rules where they appear

(                    : 8 9 28 29 30 31 32 33 34 35 39 40 41 42 43 44 55
)                    : 8 9 28 29 30 31 32 33 34 35 39 40 41 42 43 44 55
*                    : 30
+                    : 28
-                    : 29
/                    : 31
<                    : 34
=                    : 35
>                    : 33
AND                  : 39
BOOL_VAL             : 12
DEFINE               : 42
FUN                  : 43
ID                   : 42 45 53 54
IF                   : 55
MODULUS              : 32
NOT                  : 41
NUMBER               : 13
OR                   : 40
PRINT_BOOL           : 9
PRINT_NUM            : 8
SEPRATOR             : 
error                : 

Nonterminals, with rules where they appear

and_op               : 36
def_stmt             : 6
divide               : 23
empty                : 46 51
equal                : 27
exp                  : 5 8 9 10 11 28 29 29 30 31 31 32 32 33 33 34 34 35 39 40 41 42 43 47 52 55 55 55
exps                 : 10 28 30 35 39 40
fun_call             : 18
fun_exp              : 17 48
fun_ids              : 43
fun_name             : 49
greater              : 25
ids                  : 44 45
if_exp               : 19
last_exp             : 
logical_op           : 16
minus                : 21
modulus              : 24
multiply             : 22
not_op               : 38
num_op               : 15
or_op                : 37
param                : 50
params               : 48 49 50
plus                 : 20
print_stmt           : 7
program              : 0
smaller              : 26
stmt                 : 3 4
stmts                : 2 3
variable             : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . stmts
    (3) stmts -> . stmt stmts
    (4) stmts -> . stmt
    (5) stmt -> . exp
    (6) stmt -> . def_stmt
    (7) stmt -> . print_stmt
    (12) exp -> . BOOL_VAL
    (13) exp -> . NUMBER
    (14) exp -> . variable
    (15) exp -> . num_op
    (16) exp -> . logical_op
    (17) exp -> . fun_exp
    (18) exp -> . fun_call
    (19) exp -> . if_exp
    (42) def_stmt -> . ( DEFINE ID exp )
    (8) print_stmt -> . ( PRINT_NUM exp )
    (9) print_stmt -> . ( PRINT_BOOL exp )
    (53) variable -> . ID
    (20) num_op -> . plus
    (21) num_op -> . minus
    (22) num_op -> . multiply
    (23) num_op -> . divide
    (24) num_op -> . modulus
    (25) num_op -> . greater
    (26) num_op -> . smaller
    (27) num_op -> . equal
    (36) logical_op -> . and_op
    (37) logical_op -> . or_op
    (38) logical_op -> . not_op
    (43) fun_exp -> . ( FUN fun_ids exp )
    (48) fun_call -> . fun_exp params
    (49) fun_call -> . fun_name params
    (55) if_exp -> . ( IF exp exp exp )
    (28) plus -> . ( + exp exps )
    (29) minus -> . ( - exp exp )
    (30) multiply -> . ( * exp exps )
    (31) divide -> . ( / exp exp )
    (32) modulus -> . ( MODULUS exp exp )
    (33) greater -> . ( > exp exp )
    (34) smaller -> . ( < exp exp )
    (35) equal -> . ( = exp exps )
    (39) and_op -> . ( AND exp exps )
    (40) or_op -> . ( OR exp exps )
    (41) not_op -> . ( NOT exp )
    (54) fun_name -> . ID

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    (               shift and go to state 15
    ID              shift and go to state 16

    program                        shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3
    exp                            shift and go to state 4
    def_stmt                       shift and go to state 5
    print_stmt                     shift and go to state 6
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14
    plus                           shift and go to state 17
    minus                          shift and go to state 18
    multiply                       shift and go to state 19
    divide                         shift and go to state 20
    modulus                        shift and go to state 21
    greater                        shift and go to state 22
    smaller                        shift and go to state 23
    equal                          shift and go to state 24
    and_op                         shift and go to state 25
    or_op                          shift and go to state 26
    not_op                         shift and go to state 27
    fun_name                       shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (2) program -> stmts .

    $end            reduce using rule 2 (program -> stmts .)


state 3

    (3) stmts -> stmt . stmts
    (4) stmts -> stmt .
    (3) stmts -> . stmt stmts
    (4) stmts -> . stmt
    (5) stmt -> . exp
    (6) stmt -> . def_stmt
    (7) stmt -> . print_stmt
    (12) exp -> . BOOL_VAL
    (13) exp -> . NUMBER
    (14) exp -> . variable
    (15) exp -> . num_op
    (16) exp -> . logical_op
    (17) exp -> . fun_exp
    (18) exp -> . fun_call
    (19) exp -> . if_exp
    (42) def_stmt -> . ( DEFINE ID exp )
    (8) print_stmt -> . ( PRINT_NUM exp )
    (9) print_stmt -> . ( PRINT_BOOL exp )
    (53) variable -> . ID
    (20) num_op -> . plus
    (21) num_op -> . minus
    (22) num_op -> . multiply
    (23) num_op -> . divide
    (24) num_op -> . modulus
    (25) num_op -> . greater
    (26) num_op -> . smaller
    (27) num_op -> . equal
    (36) logical_op -> . and_op
    (37) logical_op -> . or_op
    (38) logical_op -> . not_op
    (43) fun_exp -> . ( FUN fun_ids exp )
    (48) fun_call -> . fun_exp params
    (49) fun_call -> . fun_name params
    (55) if_exp -> . ( IF exp exp exp )
    (28) plus -> . ( + exp exps )
    (29) minus -> . ( - exp exp )
    (30) multiply -> . ( * exp exps )
    (31) divide -> . ( / exp exp )
    (32) modulus -> . ( MODULUS exp exp )
    (33) greater -> . ( > exp exp )
    (34) smaller -> . ( < exp exp )
    (35) equal -> . ( = exp exps )
    (39) and_op -> . ( AND exp exps )
    (40) or_op -> . ( OR exp exps )
    (41) not_op -> . ( NOT exp )
    (54) fun_name -> . ID

    $end            reduce using rule 4 (stmts -> stmt .)
    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    (               shift and go to state 15
    ID              shift and go to state 16

    stmt                           shift and go to state 3
    stmts                          shift and go to state 29
    exp                            shift and go to state 4
    def_stmt                       shift and go to state 5
    print_stmt                     shift and go to state 6
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14
    plus                           shift and go to state 17
    minus                          shift and go to state 18
    multiply                       shift and go to state 19
    divide                         shift and go to state 20
    modulus                        shift and go to state 21
    greater                        shift and go to state 22
    smaller                        shift and go to state 23
    equal                          shift and go to state 24
    and_op                         shift and go to state 25
    or_op                          shift and go to state 26
    not_op                         shift and go to state 27
    fun_name                       shift and go to state 28

state 4

    (5) stmt -> exp .

    BOOL_VAL        reduce using rule 5 (stmt -> exp .)
    NUMBER          reduce using rule 5 (stmt -> exp .)
    (               reduce using rule 5 (stmt -> exp .)
    ID              reduce using rule 5 (stmt -> exp .)
    $end            reduce using rule 5 (stmt -> exp .)


state 5

    (6) stmt -> def_stmt .

    BOOL_VAL        reduce using rule 6 (stmt -> def_stmt .)
    NUMBER          reduce using rule 6 (stmt -> def_stmt .)
    (               reduce using rule 6 (stmt -> def_stmt .)
    ID              reduce using rule 6 (stmt -> def_stmt .)
    $end            reduce using rule 6 (stmt -> def_stmt .)


state 6

    (7) stmt -> print_stmt .

    BOOL_VAL        reduce using rule 7 (stmt -> print_stmt .)
    NUMBER          reduce using rule 7 (stmt -> print_stmt .)
    (               reduce using rule 7 (stmt -> print_stmt .)
    ID              reduce using rule 7 (stmt -> print_stmt .)
    $end            reduce using rule 7 (stmt -> print_stmt .)


state 7

    (12) exp -> BOOL_VAL .

    BOOL_VAL        reduce using rule 12 (exp -> BOOL_VAL .)
    NUMBER          reduce using rule 12 (exp -> BOOL_VAL .)
    (               reduce using rule 12 (exp -> BOOL_VAL .)
    ID              reduce using rule 12 (exp -> BOOL_VAL .)
    $end            reduce using rule 12 (exp -> BOOL_VAL .)
    )               reduce using rule 12 (exp -> BOOL_VAL .)


state 8

    (13) exp -> NUMBER .

    BOOL_VAL        reduce using rule 13 (exp -> NUMBER .)
    NUMBER          reduce using rule 13 (exp -> NUMBER .)
    (               reduce using rule 13 (exp -> NUMBER .)
    ID              reduce using rule 13 (exp -> NUMBER .)
    $end            reduce using rule 13 (exp -> NUMBER .)
    )               reduce using rule 13 (exp -> NUMBER .)


state 9

    (14) exp -> variable .

    BOOL_VAL        reduce using rule 14 (exp -> variable .)
    NUMBER          reduce using rule 14 (exp -> variable .)
    (               reduce using rule 14 (exp -> variable .)
    ID              reduce using rule 14 (exp -> variable .)
    $end            reduce using rule 14 (exp -> variable .)
    )               reduce using rule 14 (exp -> variable .)


state 10

    (15) exp -> num_op .

    BOOL_VAL        reduce using rule 15 (exp -> num_op .)
    NUMBER          reduce using rule 15 (exp -> num_op .)
    (               reduce using rule 15 (exp -> num_op .)
    ID              reduce using rule 15 (exp -> num_op .)
    $end            reduce using rule 15 (exp -> num_op .)
    )               reduce using rule 15 (exp -> num_op .)


state 11

    (16) exp -> logical_op .

    BOOL_VAL        reduce using rule 16 (exp -> logical_op .)
    NUMBER          reduce using rule 16 (exp -> logical_op .)
    (               reduce using rule 16 (exp -> logical_op .)
    ID              reduce using rule 16 (exp -> logical_op .)
    $end            reduce using rule 16 (exp -> logical_op .)
    )               reduce using rule 16 (exp -> logical_op .)


state 12

    (17) exp -> fun_exp .
    (48) fun_call -> fun_exp . params
    (50) params -> . param params
    (51) params -> . empty
    (52) param -> . exp
    (1) empty -> .
    (12) exp -> . BOOL_VAL
    (13) exp -> . NUMBER
    (14) exp -> . variable
    (15) exp -> . num_op
    (16) exp -> . logical_op
    (17) exp -> . fun_exp
    (18) exp -> . fun_call
    (19) exp -> . if_exp
    (53) variable -> . ID
    (20) num_op -> . plus
    (21) num_op -> . minus
    (22) num_op -> . multiply
    (23) num_op -> . divide
    (24) num_op -> . modulus
    (25) num_op -> . greater
    (26) num_op -> . smaller
    (27) num_op -> . equal
    (36) logical_op -> . and_op
    (37) logical_op -> . or_op
    (38) logical_op -> . not_op
    (43) fun_exp -> . ( FUN fun_ids exp )
    (48) fun_call -> . fun_exp params
    (49) fun_call -> . fun_name params
    (55) if_exp -> . ( IF exp exp exp )
    (28) plus -> . ( + exp exps )
    (29) minus -> . ( - exp exp )
    (30) multiply -> . ( * exp exps )
    (31) divide -> . ( / exp exp )
    (32) modulus -> . ( MODULUS exp exp )
    (33) greater -> . ( > exp exp )
    (34) smaller -> . ( < exp exp )
    (35) equal -> . ( = exp exps )
    (39) and_op -> . ( AND exp exps )
    (40) or_op -> . ( OR exp exps )
    (41) not_op -> . ( NOT exp )
    (54) fun_name -> . ID

  ! reduce/reduce conflict for BOOL_VAL resolved using rule 1 (empty -> .)
  ! reduce/reduce conflict for NUMBER resolved using rule 1 (empty -> .)
  ! reduce/reduce conflict for ( resolved using rule 1 (empty -> .)
  ! reduce/reduce conflict for ID resolved using rule 1 (empty -> .)
  ! reduce/reduce conflict for $end resolved using rule 1 (empty -> .)
  ! reduce/reduce conflict for ) resolved using rule 1 (empty -> .)
  ! shift/reduce conflict for BOOL_VAL resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
    $end            reduce using rule 1 (empty -> .)
    )               reduce using rule 1 (empty -> .)
    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 16
    (               shift and go to state 34

  ! BOOL_VAL        [ reduce using rule 17 (exp -> fun_exp .) ]
  ! NUMBER          [ reduce using rule 17 (exp -> fun_exp .) ]
  ! (               [ reduce using rule 17 (exp -> fun_exp .) ]
  ! ID              [ reduce using rule 17 (exp -> fun_exp .) ]
  ! $end            [ reduce using rule 17 (exp -> fun_exp .) ]
  ! )               [ reduce using rule 17 (exp -> fun_exp .) ]
  ! BOOL_VAL        [ reduce using rule 1 (empty -> .) ]
  ! NUMBER          [ reduce using rule 1 (empty -> .) ]
  ! (               [ reduce using rule 1 (empty -> .) ]
  ! ID              [ reduce using rule 1 (empty -> .) ]

    fun_exp                        shift and go to state 12
    params                         shift and go to state 30
    param                          shift and go to state 31
    empty                          shift and go to state 32
    exp                            shift and go to state 33
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14
    plus                           shift and go to state 17
    minus                          shift and go to state 18
    multiply                       shift and go to state 19
    divide                         shift and go to state 20
    modulus                        shift and go to state 21
    greater                        shift and go to state 22
    smaller                        shift and go to state 23
    equal                          shift and go to state 24
    and_op                         shift and go to state 25
    or_op                          shift and go to state 26
    not_op                         shift and go to state 27
    fun_name                       shift and go to state 28

state 13

    (18) exp -> fun_call .

    BOOL_VAL        reduce using rule 18 (exp -> fun_call .)
    NUMBER          reduce using rule 18 (exp -> fun_call .)
    (               reduce using rule 18 (exp -> fun_call .)
    ID              reduce using rule 18 (exp -> fun_call .)
    $end            reduce using rule 18 (exp -> fun_call .)
    )               reduce using rule 18 (exp -> fun_call .)


state 14

    (19) exp -> if_exp .

    BOOL_VAL        reduce using rule 19 (exp -> if_exp .)
    NUMBER          reduce using rule 19 (exp -> if_exp .)
    (               reduce using rule 19 (exp -> if_exp .)
    ID              reduce using rule 19 (exp -> if_exp .)
    $end            reduce using rule 19 (exp -> if_exp .)
    )               reduce using rule 19 (exp -> if_exp .)


state 15

    (42) def_stmt -> ( . DEFINE ID exp )
    (8) print_stmt -> ( . PRINT_NUM exp )
    (9) print_stmt -> ( . PRINT_BOOL exp )
    (43) fun_exp -> ( . FUN fun_ids exp )
    (55) if_exp -> ( . IF exp exp exp )
    (28) plus -> ( . + exp exps )
    (29) minus -> ( . - exp exp )
    (30) multiply -> ( . * exp exps )
    (31) divide -> ( . / exp exp )
    (32) modulus -> ( . MODULUS exp exp )
    (33) greater -> ( . > exp exp )
    (34) smaller -> ( . < exp exp )
    (35) equal -> ( . = exp exps )
    (39) and_op -> ( . AND exp exps )
    (40) or_op -> ( . OR exp exps )
    (41) not_op -> ( . NOT exp )

    DEFINE          shift and go to state 35
    PRINT_NUM       shift and go to state 36
    PRINT_BOOL      shift and go to state 37
    FUN             shift and go to state 38
    IF              shift and go to state 39
    +               shift and go to state 40
    -               shift and go to state 41
    *               shift and go to state 42
    /               shift and go to state 43
    MODULUS         shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46
    =               shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49
    NOT             shift and go to state 50


state 16

    (53) variable -> ID .
    (54) fun_name -> ID .

  ! reduce/reduce conflict for BOOL_VAL resolved using rule 53 (variable -> ID .)
  ! reduce/reduce conflict for NUMBER resolved using rule 53 (variable -> ID .)
  ! reduce/reduce conflict for ID resolved using rule 53 (variable -> ID .)
  ! reduce/reduce conflict for ( resolved using rule 53 (variable -> ID .)
  ! reduce/reduce conflict for $end resolved using rule 53 (variable -> ID .)
  ! reduce/reduce conflict for ) resolved using rule 53 (variable -> ID .)
    BOOL_VAL        reduce using rule 53 (variable -> ID .)
    NUMBER          reduce using rule 53 (variable -> ID .)
    (               reduce using rule 53 (variable -> ID .)
    ID              reduce using rule 53 (variable -> ID .)
    $end            reduce using rule 53 (variable -> ID .)
    )               reduce using rule 53 (variable -> ID .)

  ! BOOL_VAL        [ reduce using rule 54 (fun_name -> ID .) ]
  ! NUMBER          [ reduce using rule 54 (fun_name -> ID .) ]
  ! ID              [ reduce using rule 54 (fun_name -> ID .) ]
  ! (               [ reduce using rule 54 (fun_name -> ID .) ]
  ! $end            [ reduce using rule 54 (fun_name -> ID .) ]
  ! )               [ reduce using rule 54 (fun_name -> ID .) ]


state 17

    (20) num_op -> plus .

    BOOL_VAL        reduce using rule 20 (num_op -> plus .)
    NUMBER          reduce using rule 20 (num_op -> plus .)
    (               reduce using rule 20 (num_op -> plus .)
    ID              reduce using rule 20 (num_op -> plus .)
    $end            reduce using rule 20 (num_op -> plus .)
    )               reduce using rule 20 (num_op -> plus .)


state 18

    (21) num_op -> minus .

    BOOL_VAL        reduce using rule 21 (num_op -> minus .)
    NUMBER          reduce using rule 21 (num_op -> minus .)
    (               reduce using rule 21 (num_op -> minus .)
    ID              reduce using rule 21 (num_op -> minus .)
    $end            reduce using rule 21 (num_op -> minus .)
    )               reduce using rule 21 (num_op -> minus .)


state 19

    (22) num_op -> multiply .

    BOOL_VAL        reduce using rule 22 (num_op -> multiply .)
    NUMBER          reduce using rule 22 (num_op -> multiply .)
    (               reduce using rule 22 (num_op -> multiply .)
    ID              reduce using rule 22 (num_op -> multiply .)
    $end            reduce using rule 22 (num_op -> multiply .)
    )               reduce using rule 22 (num_op -> multiply .)


state 20

    (23) num_op -> divide .

    BOOL_VAL        reduce using rule 23 (num_op -> divide .)
    NUMBER          reduce using rule 23 (num_op -> divide .)
    (               reduce using rule 23 (num_op -> divide .)
    ID              reduce using rule 23 (num_op -> divide .)
    $end            reduce using rule 23 (num_op -> divide .)
    )               reduce using rule 23 (num_op -> divide .)


state 21

    (24) num_op -> modulus .

    BOOL_VAL        reduce using rule 24 (num_op -> modulus .)
    NUMBER          reduce using rule 24 (num_op -> modulus .)
    (               reduce using rule 24 (num_op -> modulus .)
    ID              reduce using rule 24 (num_op -> modulus .)
    $end            reduce using rule 24 (num_op -> modulus .)
    )               reduce using rule 24 (num_op -> modulus .)


state 22

    (25) num_op -> greater .

    BOOL_VAL        reduce using rule 25 (num_op -> greater .)
    NUMBER          reduce using rule 25 (num_op -> greater .)
    (               reduce using rule 25 (num_op -> greater .)
    ID              reduce using rule 25 (num_op -> greater .)
    $end            reduce using rule 25 (num_op -> greater .)
    )               reduce using rule 25 (num_op -> greater .)


state 23

    (26) num_op -> smaller .

    BOOL_VAL        reduce using rule 26 (num_op -> smaller .)
    NUMBER          reduce using rule 26 (num_op -> smaller .)
    (               reduce using rule 26 (num_op -> smaller .)
    ID              reduce using rule 26 (num_op -> smaller .)
    $end            reduce using rule 26 (num_op -> smaller .)
    )               reduce using rule 26 (num_op -> smaller .)


state 24

    (27) num_op -> equal .

    BOOL_VAL        reduce using rule 27 (num_op -> equal .)
    NUMBER          reduce using rule 27 (num_op -> equal .)
    (               reduce using rule 27 (num_op -> equal .)
    ID              reduce using rule 27 (num_op -> equal .)
    $end            reduce using rule 27 (num_op -> equal .)
    )               reduce using rule 27 (num_op -> equal .)


state 25

    (36) logical_op -> and_op .

    BOOL_VAL        reduce using rule 36 (logical_op -> and_op .)
    NUMBER          reduce using rule 36 (logical_op -> and_op .)
    (               reduce using rule 36 (logical_op -> and_op .)
    ID              reduce using rule 36 (logical_op -> and_op .)
    $end            reduce using rule 36 (logical_op -> and_op .)
    )               reduce using rule 36 (logical_op -> and_op .)


state 26

    (37) logical_op -> or_op .

    BOOL_VAL        reduce using rule 37 (logical_op -> or_op .)
    NUMBER          reduce using rule 37 (logical_op -> or_op .)
    (               reduce using rule 37 (logical_op -> or_op .)
    ID              reduce using rule 37 (logical_op -> or_op .)
    $end            reduce using rule 37 (logical_op -> or_op .)
    )               reduce using rule 37 (logical_op -> or_op .)


state 27

    (38) logical_op -> not_op .

    BOOL_VAL        reduce using rule 38 (logical_op -> not_op .)
    NUMBER          reduce using rule 38 (logical_op -> not_op .)
    (               reduce using rule 38 (logical_op -> not_op .)
    ID              reduce using rule 38 (logical_op -> not_op .)
    $end            reduce using rule 38 (logical_op -> not_op .)
    )               reduce using rule 38 (logical_op -> not_op .)


state 28

    (49) fun_call -> fun_name . params
    (50) params -> . param params
    (51) params -> . empty
    (52) param -> . exp
    (1) empty -> .
    (12) exp -> . BOOL_VAL
    (13) exp -> . NUMBER
    (14) exp -> . variable
    (15) exp -> . num_op
    (16) exp -> . logical_op
    (17) exp -> . fun_exp
    (18) exp -> . fun_call
    (19) exp -> . if_exp
    (53) variable -> . ID
    (20) num_op -> . plus
    (21) num_op -> . minus
    (22) num_op -> . multiply
    (23) num_op -> . divide
    (24) num_op -> . modulus
    (25) num_op -> . greater
    (26) num_op -> . smaller
    (27) num_op -> . equal
    (36) logical_op -> . and_op
    (37) logical_op -> . or_op
    (38) logical_op -> . not_op
    (43) fun_exp -> . ( FUN fun_ids exp )
    (48) fun_call -> . fun_exp params
    (49) fun_call -> . fun_name params
    (55) if_exp -> . ( IF exp exp exp )
    (28) plus -> . ( + exp exps )
    (29) minus -> . ( - exp exp )
    (30) multiply -> . ( * exp exps )
    (31) divide -> . ( / exp exp )
    (32) modulus -> . ( MODULUS exp exp )
    (33) greater -> . ( > exp exp )
    (34) smaller -> . ( < exp exp )
    (35) equal -> . ( = exp exps )
    (39) and_op -> . ( AND exp exps )
    (40) or_op -> . ( OR exp exps )
    (41) not_op -> . ( NOT exp )
    (54) fun_name -> . ID

  ! shift/reduce conflict for BOOL_VAL resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
    $end            reduce using rule 1 (empty -> .)
    )               reduce using rule 1 (empty -> .)
    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 16
    (               shift and go to state 34

  ! BOOL_VAL        [ reduce using rule 1 (empty -> .) ]
  ! NUMBER          [ reduce using rule 1 (empty -> .) ]
  ! (               [ reduce using rule 1 (empty -> .) ]
  ! ID              [ reduce using rule 1 (empty -> .) ]

    fun_name                       shift and go to state 28
    params                         shift and go to state 51
    param                          shift and go to state 31
    empty                          shift and go to state 32
    exp                            shift and go to state 33
    variable                       shift and go to state 9
    num_op                         shift and go to state 10
    logical_op                     shift and go to state 11
    fun_exp                        shift and go to state 12
    fun_call                       shift and go to state 13
    if_exp                         shift and go to state 14
    plus                           shift and go to state 17
    minus                          shift and go to state 18
    multiply                       shift and go to state 19
    divide                         shift and go to state 20
    modulus                        shift and go to state 21
    greater                        shift and go to state 22
    smaller                        shift and go to state 23
    equal                          shift and go to state 24
    and_op                         shift and go to state 25
    or_op                          shift and go to state 26
    not_op                         shift and go to state 27

state 29

    (3) stmts -> stmt stmts .

    $end            reduce using rule 3 (stmts -> stmt stmts .)


state 30

    (48) fun_call -> fun_exp params .

    BOOL_VAL        reduce using rule 48 (fun_call -> fun_exp params .)
    NUMBER          reduce using rule 48 (fun_call -> fun_exp params .)
    (               reduce using rule 48 (fun_call -> fun_exp params .)
    ID              reduce using rule 48 (fun_call -> fun_exp params .)
    $end            reduce using rule 48 (fun_call -> fun_exp params .)
    )               reduce using rule 48 (fun_call -> fun_exp params .)


state 31

    (50) params -> param . params
    (50) params -> . param params
    (51) params -> . empty
    (52) param -> . exp
    (1) empty -> .
    (12) exp -> . BOOL_VAL
    (13) exp -> . NUMBER
    (14) exp -> . variable
    (15) exp -> . num_op
    (16) exp -> . logical_op
    (17) exp -> . fun_exp
    (18) exp -> . fun_call
    (19) exp -> . if_exp
    (53) variable -> . ID
    (20) num_op -> . plus
    (21) num_op -> . minus
    (22) num_op -> . multiply
    (23) num_op -> . divide
    (24) num_op -> . modulus
    (25) num_op -> . greater
    (26) num_op -> . smaller
    (27) num_op -> . equal
    (36) logical_op -> . and_op
    (37) logical_op -> . or_op
    (38) logical_op -> . not_op
    (43) fun_exp -> . ( FUN fun_ids exp )
    (48) fun_call -> . fun_exp params
    (49) fun_call -> . fun_name params
    (55) if_exp -> . ( IF exp exp exp )
    (28) plus -> . ( + exp exps )
    (29) minus -> . ( - exp exp )
    (30) multiply -> . ( * exp exps )
    (31) divide -> . ( / exp exp )
    (32) modulus -> . ( MODULUS exp exp )
    (33) greater -> . ( > exp exp )
    (34) smaller -> . ( < exp exp )
    (35) equal -> . ( = exp exps )
    (39) and_op -> . ( AND exp exps )
    (40) or_op -> . ( OR exp exps )
    (41) not_op -> . ( NOT exp )
    (54) fun_name -> . ID
